--- a/html/index.html
+++ b/html/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="../css/bootstrap.css"  rel="stylesheet" >
+    <link href="../css/bootstrap.css" href="../css/styles_cbs.css"  rel="stylesheet" >
 
     <title>MASCOTAS CBS</title>
   </head>
