Actualización de hola de estilos
Se agregan estilos de la barra de navegación

--- a/html/index.html
+++ b/html/index.html
@@ -8,7 +8,36 @@
     <title>MASCOTAS CBS</title>
   </head>
   <body>
-
+    <!-- Esto es una barra de navegación -->
+    <header class="container-fluid">
+      <div class="row">
+        <nav class="navbar navbar-expand-sm navbar-light bg-light border-5 border-bottom border-inverse">
+          <div class="container-fluid">
+            <a href="Index.html" class="navbar-brand"> <img src="#" height="50px" width="100" alt="logo"></a>
+            <button 
+              type="button" class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#MenuNavegacion">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div id="MenuNavegacion" class="collapse navbar-collapse">
+              <ul class="navbar-nav ms-3">
+                <li class="nav-item"><a class="nav-link" href="Index.html">Inicio</a></li>
+                <li class="nav-item"><a class="nav-link" href="#">¿Qui&eacute;nes Somos?</a></li>
+                <li class="nav-item dropdown">
+                  <a class="nav-link dropdown-toggle" href="#" role="buttom" data-bs-toggle="dropdown">Productos</a>
+                  <ul class="dropdown-menu">
+                    <li><a class="dropdown-item" href="#">Todos</a></li>
+                    <li><a class="dropdown-item" href="#">Gatos</a></li>
+                    <li><a class="dropdown-item" href="#">Perros</a></li>
+                    <li><a class="dropdown-item" href="#">Farmacia</a></li>
+                  </ul>
+                </li>
+                <li class="nav-item"><a class="nav-link" href="#">Contacto</a></li>
+              </ul>
+            </div>
+          </div>
+        </nav>
+      </div>
+    </header>
     <div class="container-fluid ">
 
         <!-- NAVBAR-->
