--- a/html/index.html
+++ b/html/index.html
@@ -3,17 +3,16 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="../css/bootstrap.css" href="../css/styles_cbs.css"  rel="stylesheet" >
-    <style> body{background-image: url(../img/back-ground/fondo.jpg);}</style>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+    <link rel="stylesheet" href="../css/styles_cbs.css">
     <title>MASCOTAS CBS</title>
   </head>
   <body>
     <!-- Esto es una barra de navegación -->
     <header class="container-fluid">
-      <div class="row">
         <nav class="navbar navbar-expand-sm navbar-light bg-light border-5 border-bottom border-inverse">
           <div class="container-fluid">
-            <a href="Index.html" class="navbar-brand"> <img src="#" height="50px" width="100" alt="logo"></a>
+            <a href="Index.html" class="navbar-brand"> <img src="../img/LOGOS/LOGO-TRANSPARENTE.png" height="50px" width="100" alt="logo"></a>
             <button 
               type="button" class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#MenuNavegacion">
                 <span class="navbar-toggler-icon"></span>
