Agrego Página "¿Quiénes Somos?"
Se agrega código HTML con código responsivo y código CSS comentado

--- a/html/index.html
+++ b/html/index.html
@@ -19,7 +19,7 @@
           <div id="MenuNavegacion" class="collapse navbar-collapse">
             <ul class="navbar-nav ms-3">
               <li class="nav-item"><a class="nav-link" href="Index.html">Inicio</a></li>
-              <li class="nav-item"><a class="nav-link" href="#">¿Qui&eacute;nes Somos?</a></li>
+              <li class="nav-item"><a class="nav-link" href="Quiénes Somos.html">¿Qui&eacute;nes Somos?</a></li>
               <li class="nav-item dropdown">
                  <a class="nav-link dropdown-toggle" href="#" role="buttom" data-bs-toggle="dropdown">Productos</a>
                 <ul class="dropdown-menu">
