--- a/html/index.html
+++ b/html/index.html
@@ -66,6 +66,162 @@
       <br>
       <br>
     </div>
+
+    <!--  SLIDER DE MARCAS -->
+
+    <div class="container col-10">
+
+      <h3>NUESTRAS MARCAS</h3><br><br>
+
+      <div class="slider">
+          <div class="slide-track">
+
+              <div class="slide">
+                  <img src="../IMG/SLIDER/Nueva carpeta/logo_1-fotor-bg-remover-2023033119535.png">
+              </div>
+              <div class="slide">
+                  <img src="../IMG/SLIDER/logo_2.png"> 
+              </div>
+              <div class="slide">
+                  <img src="../IMG/SLIDER/Nueva carpeta/logo_3-fotor-bg-remover-2023033119621.png">
+              </div>
+              <div class="slide">
+                  <img src="../IMG/SLIDER/logo_4.png">
+              </div>
+              <div class="slide">
+                  <img src="../IMG/SLIDER/Nueva carpeta/logo_5-fotor-bg-remover-2023033119657.png">
+              </div>
+              <div class="slide">
+                  <img src="../IMG/SLIDER/Nueva carpeta/logo_6-fotor-bg-remover-2023033119715.png">
+              </div>
+
+
+              
+              <div class="slide">
+                  <img src="../IMG/SLIDER/Nueva carpeta/logo_1-fotor-bg-remover-2023033119535.png">
+              </div>
+              <div class="slide">
+                  <img src="../IMG/SLIDER/logo_2.png"> 
+              </div>
+              <div class="slide">
+                  <img src="../IMG/SLIDER/Nueva carpeta/logo_3-fotor-bg-remover-2023033119621.png">
+              </div>
+              <div class="slide">
+                  <img src="../IMG/SLIDER/logo_4.png">
+              </div>
+              <div class="slide">
+                  <img src="../IMG/SLIDER/Nueva carpeta/logo_5-fotor-bg-remover-2023033119657.png">
+              </div>
+              <div class="slide">
+                  <img src="../IMG/SLIDER/Nueva carpeta/logo_6-fotor-bg-remover-2023033119715.png">
+              </div>
+
+
+
+          </div>
+
+      </div>
+
+      
+
+    <!-- PRODUCTOS PARA PERRO-->
+    <div class="container">
+      <br><br>
+      <h3>PRODUCTOS PARA PERRO</h3>
+      <div class="container-fluid row textproductosindex">
+
+          <div class="col-3 imgproductosindex ">
+              <a href="www.google.cl">
+                  <img src="../img/back-ground/imagen_prueba.jpg">
+              </a>
+              <h5>ALIMENTO SECO</h5>
+          </div>
+
+          <div class="col-2 "></div>
+
+          <div class="col-3 imgproductosindex">
+              <a href="www.google.cl">
+                  <img src="../img/back-ground/imagen_prueba.jpg">
+              </a>
+              <h5>ACCESORIOS</h5>
+          </div>
+
+          <div class="col-2"></div>
+
+          <div class="col-3 imgproductosindex">
+              <a href="www.google.cl">
+                  <img src="../img/back-ground/imagen_prueba.jpg">
+              </a>
+              <h5>ALIMENTO HUMEDO</h5>
+          </div>
+
+        </div>
+
+    </div>
+
+    <!-- PRODUCTOS PARA PERRO-->
+    <div class="container">
+      <br><br>
+      <h3>PRODUCTOS PARA GATO</h3>
+      <div class="container-fluid row textproductosindex">
+
+          <div class="col-3 imgproductosindex ">
+              <a href="www.google.cl">
+                  <img src="../img/back-ground/imagen_prueba.jpg">
+              </a>
+              <h5>ALIMENTO SECO</h5>
+          </div>
+
+          <div class="col-2 "></div>
+
+          <div class="col-3 imgproductosindex">
+              <a href="www.google.cl">
+                  <img src="../img/back-ground/imagen_prueba.jpg">
+              </a>
+              <h5>ACCESORIOS</h5>
+          </div>
+
+          <div class="col-2"></div>
+
+          <div class="col-3 imgproductosindex">
+              <a href="www.google.cl">
+                  <img src="../img/back-ground/imagen_prueba.jpg">
+              </a>
+              <h5>ALIMENTO HUMEDO</h5>
+          </div>
+
+        </div>
+
+    </div>
+
+
+  
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
     <script src="https://code.jquery.com/jquery-3.6.4.min.js" integrity="sha256-oP6HI9z1XaZNBrJURtCoUT5SUnxFr8s3BzRl+cbzUq8=" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
   </body>
