--- a/html/index.html
+++ b/html/index.html
@@ -195,6 +195,32 @@
     </div>
 
 
+    <!-- UBICANOS-->
+    <div class="col-12">
+
+      <div class="container row divubicacion">
+
+          <div class="col-6">
+              <a href="https://www.google.com/maps/place/CBS+Mascotas/@-33.3646955,-70.6703236,17z/data=!4m6!3m5!1s0x9662c7daa67963c1:0xb35093b215a9b810!8m2!3d-33.3646955!4d-70.6702378!16s%2Fg%2F11tj91bvvl">
+                  <img class="container-fluid imagendiv" src="../img/UBICACION/CBS_UBICACIÓN.jpg">
+              </a>
+
+          </div>
+          <div class="col-1">
+
+          </div>
+
+          <div class="col-5 divinterno" >
+              <div>
+                  <h1 class="container-fluid textdivubicacion"><br>¡¡VISÍTANOS!!<br>CBS<br>MASCOTAS</h1>
+              </div>
+          </div>
+
+      </div>
+
+  </div>
+
+
   
 
 
