Footer y actualización de ¿Quiénes Somos?
se agrega footer responsive, pero hay que arreglarlo en el index, toma solo 10 columnas

--- a/html/index.html
+++ b/html/index.html
@@ -197,29 +197,70 @@
 
     <!-- UBICANOS-->
     <div class="col-12">
-
       <div class="container row divubicacion">
-
-          <div class="col-6">
-              <a href="https://www.google.com/maps/place/CBS+Mascotas/@-33.3646955,-70.6703236,17z/data=!4m6!3m5!1s0x9662c7daa67963c1:0xb35093b215a9b810!8m2!3d-33.3646955!4d-70.6702378!16s%2Fg%2F11tj91bvvl">
-                  <img class="container-fluid imagendiv" src="../img/UBICACION/CBS_UBICACIÓN.jpg">
-              </a>
-
+        <div class="col-6">
+            <a href="https://www.google.com/maps/place/CBS+Mascotas/@-33.3646955,-70.6703236,17z/data=!4m6!3m5!1s0x9662c7daa67963c1:0xb35093b215a9b810!8m2!3d-33.3646955!4d-70.6702378!16s%2Fg%2F11tj91bvvl">
+                <img class="container-fluid imagendiv" src="../img/UBICACION/CBS_UBICACIÓN.jpg">
+            </a>
+        </div>
+        <div class="col-1"> </div>
+        <div class="col-5 divinterno" >
+            <div>
+                <h1 class="container-fluid textdivubicacion"><br>¡¡VISÍTANOS!!<br>CBS<br>MASCOTAS</h1>
+            </div>
+        </div>
+      </div>
+    </div>
+    <!-- Footer -->
+    <div id="footer" class="container-fluid">
+      <div class="row">
+          <div id="logoenftr" class="container-fluid col-xs-12 col-md-6 col-lg-3">
+              <p>columna</p>
           </div>
-          <div class="col-1">
-
-          </div>
-
-          <div class="col-5 divinterno" >
-              <div>
-                  <h1 class="container-fluid textdivubicacion"><br>¡¡VISÍTANOS!!<br>CBS<br>MASCOTAS</h1>
+          <div id="linksftr" class="container-fluid col-xs-12 col-md-6 col-lg-3">
+              <div class="mb-2">
+                  <a class="text-white text-decoration-none" href="">Ayuda</a>
+              </div>
+              <div class="mb-2">
+              <a class="text-white text-decoration-none" href="">Términos y Condiciones</a>
+              </div>
+              <div class="mb-2">
+                  <a class="text-white text-decoration-none" href="">Políticas de Privacidad</a>
+              </div>
+              <div class="mb-2">
+                  <a class="text-white text-decoration-none" href="">Preguntas Frecuentes</a>
+              </div>
+              <div class="mb-2">
+                  <a class="text-white text-decoration-none" href="">Políticas de Empresa</a>
               </div>
           </div>
-
+          <div id="RRSSftr" class="container-fluid col-xs-12 col-md-6 col-lg-3">
+              <div class="mb-2">
+                  <a class="text-white text-decoration-none" href="https://www.instagram.com/cbsmascotas/"><img src="../img/LOGOS/Logo_ig.png" alt="Instagram" style="height: 45px; width: 45px;">@cbsmascotas</a>
+              </div>
+              <div class="mb-2">
+                  <a class="text-white text-decoration-none" href="https://www.facebook.com/profile.php?id=100090160240180"><img src="../img/LOGOS/Logo_fb.png" alt="Facebook" style="height: 45px; width: 45px;"> CBS Mascotas</a>
+              </div>
+          </div>
+          <div id="contactanos" class="container-fluid col-xs-12 col-md-6 col-lg-3">
+              <h1> <strong>Contáctanos</strong></h1>
+              <div class="mb-2">
+                  <a class="text-white text-decoration-none" 
+                  href="https://wa.me/56981828309?text=Muy%20buenas%20estimado%20cliente,%20espero%20se%20encuentre%20bien.%20Nos%20contactaremos%20con%20usted%20en%20la%20brevedad%20posible.">
+                  <img src="../img/LOGOS/Logo_wsp.png" alt="Whatsapp" style="height: 45px; width: 45px;">+56 9 8182 8309</a>
+              </div>
+              <div class="mb-2">
+                  <a class="text-white text-decoration-none" href=""> <img src="../img/LOGOS/Logo_gm.png" alt="correo" style="height: 45px; width: 45px;"> cbsmascoteria@gmail.com</a>
+              </div>
+              <div class="container-fluid">
+                  <img src="../img/LOGOS/Logo_wp.png" alt="webpay" style="margin-left: 20px; margin-top: 10px;">
+              </div>
+          </div>
+          <div id="brderechos" class="container-fluid col-xs-12 col-md-12 col-lg-12">
+              <p>Copyright ©CBSMascotas. Todos los derechos reservados</p>
+          </div>
       </div>
-
   </div>
-
 
   
 
