--- a/html/Quiénes Somos.html
+++ b/html/Quiénes Somos.html
@@ -42,21 +42,70 @@
             </div>
             <div id="cajap1" class="container-fluid col-md-5 col-sm-12">
                 <p>CBS Mascotas es una tienda familiar dedicada a vender alimentos y artículos para mascotas, 
-                   más específicamente para gatos y perros (por el momento), la cual tiene como objetivo principal 
-                   brindarle a usted y a sus queridos amigos peludos la mejor calidad y la mayor variedad en productos 
-                   y servicios posibles para que se sienta cómodo y satisfecho con su compra.</p>
+                más específicamente para gatos y perros (por el momento), la cual tiene como objetivo principal 
+                brindarle a usted y a sus queridos amigos peludos la mejor calidad y la mayor variedad en productos 
+                y servicios posibles para que se sienta cómodo y satisfecho con su compra.</p>
             </div>
         </div>
         <div id="Contorigen" class="row col-md-12">
             <div id="Cajaimg2" class="container-fluid col-md-5 col-sm-12">
             </div>
             <div id="Cajap2" class="container-fluid col-md-5 col-sm-12">
-                <p>Desde el primer día nuestra misión ha sido expandir nuestro catálogo de productos y mejorar la experiencia de
-                   nuestros clientes. Nos enorgullece ver hasta dónde hemos llegado, pero no podemos quedarnos ahí.Todas nuestras 
-                   colecciones han sido cuidadosamente seleccionadas. Las opciones de entrega y los métodos de pago que ofrecemos 
-                   son muy diversos y flexibles. Navega por nuestra galería de productos y vive la experiencia que sólo CBS Mascotas 
-                   te puede ofrecer. No dudes en contactarnos en caso de tener alguna duda, comentario o sugerencia.
+                 <p>Desde el primer día nuestra misión ha sido expandir nuestro catálogo de productos y mejorar la experiencia de
+                    nuestros clientes. Nos enorgullece ver hasta dónde hemos llegado, pero no podemos quedarnos ahí.Todas nuestras 
+                    colecciones han sido cuidadosamente seleccionadas. Las opciones de entrega y los métodos de pago que ofrecemos 
+                    son muy diversos y flexibles. Navega por nuestra galería de productos y vive la experiencia que sólo CBS Mascotas 
+                    te puede ofrecer. No dudes en contactarnos en caso de tener alguna duda, comentario o sugerencia.
                 </p> 
+            </div>
+        </div>
+    </div>
+
+    <div id="footer" class="container-fluid">
+        <div class="row">
+            <div id="logoenftr" class="container-fluid col-xs-12 col-md-6 col-lg-3">
+            </div>
+            <div id="linksftr" class="container-fluid col-xs-12 col-md-6 col-lg-3">
+                <div class="mb-2">
+                    <a class="text-white text-decoration-none" href="">Ayuda</a>
+                </div>
+                <div class="mb-2">
+                <a class="text-white text-decoration-none" href="">Términos y Condiciones</a>
+                </div>
+                <div class="mb-2">
+                    <a class="text-white text-decoration-none" href="">Políticas de Privacidad</a>
+                </div>
+                <div class="mb-2">
+                    <a class="text-white text-decoration-none" href="">Preguntas Frecuentes</a>
+                </div>
+                <div class="mb-2">
+                    <a class="text-white text-decoration-none" href="">Políticas de Empresa</a>
+                </div>
+            </div>
+            <div id="RRSSftr" class="container-fluid col-xs-12 col-md-6 col-lg-3">
+                <div class="mb-2">
+                    <a class="text-white text-decoration-none" href="https://www.instagram.com/cbsmascotas/"><img src="../img/LOGOS/Logo_ig.png" alt="Instagram" style="height: 45px; width: 45px;">@cbsmascotas</a>
+                </div>
+                <div class="mb-2">
+                    <a class="text-white text-decoration-none" href="https://www.facebook.com/profile.php?id=100090160240180"><img src="../img/LOGOS/Logo_fb.png" alt="Facebook" style="height: 45px; width: 45px;"> CBS Mascotas</a>
+                </div>
+            </div>
+            <div id="contactanos" class="container-fluid col-xs-12 col-md-6 col-lg-3">
+                <h1> <strong>Contáctanos</strong></h1>
+                <div class="mb-2">
+                    <a class="text-white text-decoration-none" 
+                    href="https://wa.me/56981828309?text=Muy%20buenas%20estimado%20cliente,%20espero%20se%20encuentre%20bien.%20Nos%20contactaremos%20con%20usted%20en%20la%20brevedad%20posible.">
+                    <img src="../img/LOGOS/Logo_wsp.png" alt="Whatsapp" style="height: 45px; width: 45px;">+56 9 8182 8309</a>
+                </div>
+                <div class="mb-2">
+                    <a class="text-white text-decoration-none" href=""> <img src="../img/LOGOS/Logo_gm.png" alt="correo" style="height: 45px; width: 45px;"> cbsmascoteria@gmail.com</a>
+                </div>
+                <div class="container-fluid">
+                    <img src="../img/LOGOS/Logo_wp.png" alt="webpay" style="margin-left: 20px; margin-top: 10px;">
+                </div>
+            </div>
+            <div id="brderechos" class="container-fluid col-xs-12 col-md-12 col-lg-12">
+                <p>Copyright ©CBSMascotas. Todos los derechos reservados</p>
             </div>
         </div>
     </div>
