Se agrega "contacto"
Se agrega la página "contacto"

--- a/html/Contacto.html
+++ b/html/Contacto.html
@@ -34,33 +34,12 @@
           </div>
         </div>
       </nav>
-    </div>  
-    <div id="QuienesSomos" class="container-fluid col-md-11">
-        <div id="Contintro" class="row col-md-12">
-            <div id="cajaimg1" class="container-fluid col-md-5 col-sm-12">
-                <h1>¿Qui&eacute;nes Somos?</h1>
-            </div>
-            <div id="cajap1" class="container-fluid col-md-5 col-sm-12">
-                <p>CBS Mascotas es una tienda familiar dedicada a vender alimentos y artículos para mascotas, 
-                más específicamente para gatos y perros (por el momento), la cual tiene como objetivo principal 
-                brindarle a usted y a sus queridos amigos peludos la mejor calidad y la mayor variedad en productos 
-                y servicios posibles para que se sienta cómodo y satisfecho con su compra.</p>
-            </div>
-        </div>
-        <div id="Contorigen" class="row col-md-12">
-            <div id="Cajaimg2" class="container-fluid col-md-5 col-sm-12">
-            </div>
-            <div id="Cajap2" class="container-fluid col-md-5 col-sm-12">
-                 <p>Desde el primer día nuestra misión ha sido expandir nuestro catálogo de productos y mejorar la experiencia de
-                    nuestros clientes. Nos enorgullece ver hasta dónde hemos llegado, pero no podemos quedarnos ahí. Todas nuestras 
-                    colecciones han sido cuidadosamente seleccionadas. Las opciones de entrega y los métodos de pago que ofrecemos 
-                    son muy diversos y flexibles. Navega por nuestra galería de productos y vive la experiencia que sólo CBS Mascotas 
-                    te puede ofrecer. No dudes en contactarnos en caso de tener alguna duda, comentario o sugerencia.
-                </p> 
-            </div>
+    </div> 
+    <div class="container-fluid col-lg-11">
+        <div class="row">
+            
         </div>
     </div>
-
     <div id="footer" class="container-fluid">
         <div class="row">
             <div id="logoenftr" class="container-fluid col-xs-12 col-md-6 col-lg-3">
