--- a/html/Quiénes Somos.html
+++ b/html/Quiénes Somos.html
@@ -29,7 +29,7 @@
                   <li><a class="dropdown-item" href="#">Farmacia</a></li>
                 </ul>
               </li>
-                <li class="nav-item"><a class="nav-link" href="#">Contacto</a></li>
+                <li class="nav-item"><a class="nav-link" href="Contacto.html">Contacto</a></li>
              </ul>
           </div>
         </div>
