--- a/html/Contacto.html
+++ b/html/Contacto.html
@@ -19,7 +19,7 @@
           <div id="MenuNavegacion" class="collapse navbar-collapse">
             <ul class="navbar-nav ms-3">
               <li class="nav-item"><a class="nav-link" href="Index.html">Inicio</a></li>
-              <li class="nav-item"><a class="nav-link" href="#">¿Qui&eacute;nes Somos?</a></li>
+              <li class="nav-item"><a class="nav-link" href="Quiénes Somos.html">¿Qui&eacute;nes Somos?</a></li>
               <li class="nav-item dropdown">
                  <a class="nav-link dropdown-toggle" href="#" role="buttom" data-bs-toggle="dropdown">Productos</a>
                 <ul class="dropdown-menu">
@@ -37,6 +37,7 @@
     </div> 
     <div id="CuerpFrom" class="container-fluid col-lg-11">
         <div class="row">
+            <!-- Esto es un formulario -->
             <div id="contform" class="container-fluid col-xs-12 col-md-6 col-lg-6">
                 <h1>Formulario de contacto</h1>
                 <h3>Escríbenos y en breve los pondremos en contacto contigo</h3>
@@ -76,6 +77,7 @@
                     </p>          
                   </form>
             </div>
+            <!-- Esto es un mensaje de la página-->
             <div id="cajap3" class="container-fluid col-xs-12 col-md-6 col-lg-6">
                 <h1>Cont&aacute;ctanos!</h1>
                 <p>Escríbenos si quieres trabajar con nosotros, tienes alguna consulta o para hacer alguna 
@@ -92,6 +94,7 @@
             </div>
         </div>
     </div>
+    <!-- Esto es el footer -->
     <div id="footer" class="container-fluid">
         <div class="row">
             <div id="logoenftr" class="container-fluid col-xs-12 col-md-6 col-lg-3">
@@ -140,5 +143,7 @@
             </div>
         </div>
     </div>
+    <script src="https://code.jquery.com/jquery-3.6.4.min.js" integrity="sha256-oP6HI9z1XaZNBrJURtCoUT5SUnxFr8s3BzRl+cbzUq8=" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
   </body> 
 </html>
