--- a/html/index.html
+++ b/html/index.html
@@ -23,9 +23,9 @@
               <li class="nav-item dropdown">
                  <a class="nav-link dropdown-toggle" href="#" role="buttom" data-bs-toggle="dropdown">Productos</a>
                 <ul class="dropdown-menu">
-                  <li><a class="dropdown-item" href="#">Todos</a></li>
+                  <li><a class="dropdown-item" href="../html/tienda.html">Todos</a></li>
                   <li><a class="dropdown-item" href="#">Gatos</a></li>
-                  <li><a class="dropdown-item" href="#">Perros</a></li>
+                  <li><a class="dropdown-item" href="../html/tienda.html">Perros</a></li>
                   <li><a class="dropdown-item" href="#">Farmacia</a></li>
                 </ul>
               </li>
