--- a/html/Contacto.html
+++ b/html/Contacto.html
@@ -19,7 +19,7 @@
           <div id="MenuNavegacion" class="collapse navbar-collapse">
             <ul class="navbar-nav ms-3">
               <li class="nav-item"><a class="nav-link" href="Index.html">Inicio</a></li>
-              <li class="nav-item"><a class="nav-link" href="Quiénes Somos.html">¿Qui&eacute;nes Somos?</a></li>
+              <li class="nav-item"><a class="nav-link" href="#">¿Qui&eacute;nes Somos?</a></li>
               <li class="nav-item dropdown">
                  <a class="nav-link dropdown-toggle" href="#" role="buttom" data-bs-toggle="dropdown">Productos</a>
                 <ul class="dropdown-menu">
@@ -35,66 +35,11 @@
         </div>
       </nav>
     </div> 
-    <div id="CuerpFrom" class="container-fluid col-lg-11">
+    <div class="container-fluid col-lg-11">
         <div class="row">
-            <!-- Esto es un formulario -->
-            <div id="contform" class="container-fluid col-xs-12 col-md-6 col-lg-6">
-                <h1>Formulario de contacto</h1>
-                <h3>Escríbenos y en breve los pondremos en contacto contigo</h3>
-                <form action="submeter-formulario.php" method="post">       
-                    <p>
-                      <label for="nombre" class="colocar_nombre">Nombre
-                        <span class="obligatorio">*</span>
-                      </label>
-                      <input type="text" name="introducir_nombre" id="nombre" required="obligatorio" placeholder="Escribe tu nombre">
-                    </p>              
-                    <p>
-                      <label for="email" class="colocar_email">Email
-                        <span class="obligatorio">*</span>
-                      </label>
-                      <input type="email" name="introducir_email" id="email" required="obligatorio" placeholder="Escribe tu Email">
-                    </p>
-                    <p>
-                      <label for="telefone" class="colocar_telefono">Teléfono
-                      </label>
-                      <input type="tel" name="introducir_telefono" id="telefono" placeholder="+56 9 9999 9999">
-                    </p>     
-                    <p>
-                      <label for="asunto" class="colocar_asunto">Asunto
-                        <span class="obligatorio">*</span>
-                      </label>
-                      <input type="text" name="introducir_asunto" id="assunto" required="obligatorio" placeholder="Escribe un asunto">
-                    </p>    
-                    <p>
-                      <label for="mensaje" class="colocar_mensaje">Mensaje
-                        <span class="obligatorio">*</span>
-                      </label>                     
-                      <textarea name="introducir_mensaje" class="texto_mensaje" id="mensaje" required="obligatorio" placeholder="Deja aquí tu comentario..."></textarea> 
-                    </p>                    
-                    <button type="submit" name="enviar_formulario" id="enviar"><p><strong>Enviar</strong></p></button>
-                    <p class="aviso">
-                      <span class="obligatorio"> * </span>los campos son obligatorios.
-                    </p>          
-                  </form>
-            </div>
-            <!-- Esto es un mensaje de la página-->
-            <div id="cajap3" class="container-fluid col-xs-12 col-md-6 col-lg-6">
-                <h1>Cont&aacute;ctanos!</h1>
-                <p>Escríbenos si quieres trabajar con nosotros, tienes alguna consulta o para hacer alguna 
-                   sugerencia que nos ayude mejorar nuestro servicio. Estamos abiertos a cualquier tipo de 
-                   comentarios.</p>
-                <h1>Síguenos en nuestras RRSS</h1>
-                <br>
-                <div class="mb-2">
-                    <a class="text-white text-decoration-none" href="https://www.instagram.com/cbsmascotas/"><img src="../img/LOGOS/Logo_ig.png" alt="Instagram" style="height: 45px; width: 45px;">@cbsmascotas</a>
-                </div>
-                <div class="mb-2">
-                    <a class="text-white text-decoration-none" href="https://www.facebook.com/profile.php?id=100090160240180"><img src="../img/LOGOS/Logo_fb.png" alt="Facebook" style="height: 45px; width: 45px;"> CBS Mascotas</a>
-                </div>
-            </div>
+            
         </div>
     </div>
-    <!-- Esto es el footer -->
     <div id="footer" class="container-fluid">
         <div class="row">
             <div id="logoenftr" class="container-fluid col-xs-12 col-md-6 col-lg-3">
@@ -143,7 +88,5 @@
             </div>
         </div>
     </div>
-    <script src="https://code.jquery.com/jquery-3.6.4.min.js" integrity="sha256-oP6HI9z1XaZNBrJURtCoUT5SUnxFr8s3BzRl+cbzUq8=" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
   </body> 
 </html>
