--- a/html/tienda.html
+++ b/html/tienda.html
@@ -83,7 +83,7 @@
           <!-- -->
 
           <div class="card divcard1" >
-            <img src="../img/back-ground/fondo.jpg" class="card-img-top" alt="...">
+            <a href="../html/fit_formula_adulto.html"><img src="../img/FITFORMULA/MODIFICADAS/1.2.png" class="imgmenu1" alt="..."></a>
             <div class="card-body">
               <button type="button" class="buttonTOMAS1 btn-danger">Precio</button>
               <button type="button" class="buttonTOMAS2 btn-light">Agregar</button>
