Solución de errores
Se solucionan errores de estilos. La creación de clases e identificadores colisionaban.

--- a/html/Contacto.html
+++ b/html/Contacto.html
@@ -70,7 +70,7 @@
                       </label>                     
                       <textarea name="introducir_mensaje" class="texto_mensaje" id="mensaje" required="obligatorio" placeholder="Deja aquí tu comentario..."></textarea> 
                     </p>                    
-                    <button type="submit" name="enviar_formulario" id="enviar"><p><strong>Enviar</strong></p></button>
+                    <button id="btn_enviar" type="submit" name="enviar_formulario" id="enviar"><p><strong>Enviar</strong></p></button>
                     <p class="aviso">
                       <span class="obligatorio"> * </span>los campos son obligatorios.
                     </p>          
@@ -92,6 +92,7 @@
             </div>
         </div>
     </div>
+    <!-- Esto es el footer -->
     <div id="footer" class="container-fluid">
         <div class="row">
             <div id="logoenftr" class="container-fluid col-xs-12 col-md-6 col-lg-3">
