--- a/html/tienda.html
+++ b/html/tienda.html
@@ -54,15 +54,15 @@
         <div class="container-fluid row  col-xs-9 col-sm-9 col-md-9 col-lg-9  " style=" padding: 1cm;">
 
 
-          <h1 class="h1tomas">GENERAL</h1>
+          <h1 id="h1tomas">GENERAL</h1>
 
           <div class="card divcard1" >
             <a href="#tabla-datos">
               <img src="../img/COOKING_CAT/cat_pollo.png" class="card-img-top" alt="...">
             </a>
             <div class="card-body">
-                <button type="button" class="buttonTOMAS1 btn-danger">Precio</button>
-                <button type="button" class="buttonTOMAS2 btn-light">Agregar</button>
+                <button type="button" id="buttonTOMAS1">Precio</button>
+                <button type="button" id="buttonTOMAS2">Agregar</button>
             </div>
           </div>
 
@@ -83,54 +83,54 @@
           <!-- -->
 
           <div class="card divcard1" >
-            <a href="../html/fit_formula_adulto.html"><img src="../img/FITFORMULA/MODIFICADAS/1.2.png" class="imgmenu1" alt="..."></a>
+            <a href="../html/fit_formula_adulto.html"><img src="../img/FITFORMULA/MODIFICADAS/1.2.png" id="imgmenu1" alt="..."></a>
             <div class="card-body">
-              <button type="button" class="buttonTOMAS1 btn-danger">Precio</button>
-              <button type="button" class="buttonTOMAS2 btn-light">Agregar</button>
+              <button type="button" id="buttonTOMAS1">Precio</button>
+              <button type="button" id="buttonTOMAS2">Agregar</button>
             </div>
           </div>
 
           <div class="card divcard1" >
             <img src="../img/back-ground/fondo.jpg" class="card-img-top" alt="...">
             <div class="card-body">
-              <button type="button" class="buttonTOMAS1 btn-danger">Precio</button>
-              <button type="button" class="buttonTOMAS2 btn-light">Agregar</button>
+              <button type="button" id="buttonTOMAS1">Precio</button>
+              <button type="button" id="buttonTOMAS2">Agregar</button>
             </div>
           </div>
 
           <div class="card divcard1" >
             <img src="../img/back-ground/fondo.jpg" class="card-img-top" alt="...">
             <div class="card-body">
-              <button type="button" class="buttonTOMAS1 btn-danger">Precio</button>
-              <button type="button" class="buttonTOMAS2 btn-light">Agregar</button>
+              <button type="button" id="buttonTOMAS1">Precio</button>
+              <button type="button" id="buttonTOMAS2">Agregar</button>
             </div>
           </div>
           <div class="card divcard1" >
             <img src="../img/back-ground/fondo.jpg" class="card-img-top" alt="...">
             <div class="card-body">
-              <button type="button" class="buttonTOMAS1 btn-danger">Precio</button>
-              <button type="button" class="buttonTOMAS2 btn-light">Agregar</button>
+              <button type="button" id="buttonTOMAS1">Precio</button>
+              <button type="button" id="buttonTOMAS2">Agregar</button>
             </div>
           </div>
           <div class="card divcard1" >
             <img src="../img/back-ground/fondo.jpg" class="card-img-top" alt="...">
             <div class="card-body">
-              <button type="button" class="buttonTOMAS1 btn-danger">Precio</button>
-              <button type="button" class="buttonTOMAS2 btn-light">Agregar</button>
+              <button type="button" id="buttonTOMAS1">Precio</button>
+              <button type="button" id="buttonTOMAS2">Agregar</button>
             </div>
           </div>
           <div class="card divcard1" >
             <img src="../img/back-ground/fondo.jpg" class="card-img-top" alt="...">
             <div class="card-body">
-              <button type="button" class="buttonTOMAS1 btn-danger">Precio</button>
-              <button type="button" class="buttonTOMAS2 btn-light">Agregar</button>
+              <button type="button" id="buttonTOMAS1">Precio</button>
+              <button type="button" id="buttonTOMAS2">Agregar</button>
             </div>
           </div>
           <div class="card divcard1" >
             <img src="../img/back-ground/fondo.jpg" class="card-img-top" alt="...">
             <div class="card-body">
-              <button type="button" class="buttonTOMAS1 btn-danger">Precio</button>
-              <button type="button" class="buttonTOMAS2 btn-light">Agregar</button>
+              <button type="button" id="buttonTOMAS1">Precio</button>
+              <button type="button" id="buttonTOMAS2">Agregar</button>
             </div>
           </div>
 
