--- a/html/Contacto.html
+++ b/html/Contacto.html
@@ -19,17 +19,17 @@
           <div id="MenuNavegacion" class="collapse navbar-collapse">
             <ul class="navbar-nav ms-3">
               <li class="nav-item"><a class="nav-link" href="Index.html">Inicio</a></li>
-              <li class="nav-item"><a class="nav-link" href="#">¿Qui&eacute;nes Somos?</a></li>
+              <li class="nav-item"><a class="nav-link" href="Quiénes Somos.html">¿Qui&eacute;nes Somos?</a></li>
               <li class="nav-item dropdown">
                  <a class="nav-link dropdown-toggle" href="#" role="buttom" data-bs-toggle="dropdown">Productos</a>
                 <ul class="dropdown-menu">
-                  <li><a class="dropdown-item" href="#">Todos</a></li>
+                  <li><a class="dropdown-item" href="../html/tienda.html">Todos</a></li>
                   <li><a class="dropdown-item" href="#">Gatos</a></li>
-                  <li><a class="dropdown-item" href="#">Perros</a></li>
+                  <li><a class="dropdown-item" href="../html/tienda.html">Perros</a></li>
                   <li><a class="dropdown-item" href="#">Farmacia</a></li>
                 </ul>
               </li>
-                <li class="nav-item"><a class="nav-link" href="#">Contacto</a></li>
+                <li class="nav-item"><a class="nav-link" href="Contacto.html">Contacto</a></li>
              </ul>
           </div>
         </div>
@@ -141,5 +141,7 @@
             </div>
         </div>
     </div>
+    <script src="https://code.jquery.com/jquery-3.6.4.min.js" integrity="sha256-oP6HI9z1XaZNBrJURtCoUT5SUnxFr8s3BzRl+cbzUq8=" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
   </body> 
 </html>
