--- a/html/tienda.html
+++ b/html/tienda.html
@@ -11,33 +11,33 @@
 
     <!-- Esto es una barra de navegación -->
     <div id="bordebrnv"class="container-fluid">
-        <nav class="navbar navbar-expand-sm  border-3">
-          <div id="fondobrnav" class="container-fluid">
-            <a href="Index.html" class="navbar-brand"> <img src="../img/LOGOS/LOGO-TRANSPARENTE.png" height="50px" width="100" alt="logo"></a>
-            <button               type="button" class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#MenuNavegacion">
-                <span class="navbar-toggler-icon"></span>
-             </button>
-            <div id="MenuNavegacion" class="collapse navbar-collapse">
-              <ul class="navbar-nav ms-3">
-                <li class="nav-item"><a class="nav-link" href="Index.html">Inicio</a></li>
-                <li class="nav-item"><a class="nav-link" href="Quiénes Somos.html">¿Qui&eacute;nes Somos?</a></li>
-                <li class="nav-item dropdown">
-                   <a class="nav-link dropdown-toggle" href="#" role="buttom" data-bs-toggle="dropdown">Productos</a>
-                  <ul class="dropdown-menu">
-                    <li><a class="dropdown-item" href="../html/tienda.html">Todos</a></li>
-                    <li><a class="dropdown-item" href="#">Gatos</a></li>
-                    <li><a class="dropdown-item" href="../html/tienda.html">Perros</a></li>
-                    <li><a class="dropdown-item" href="#">Farmacia</a></li>
-                  </ul>
-                </li>
-                  <li class="nav-item"><a class="nav-link" href="Contacto.html">Contacto</a></li>
-               </ul>
-            </div>
+      <nav class="navbar navbar-expand-sm navbar-dark border-3">
+        <div id="fondobrnav" class="container-fluid">
+          <a href="Index.html" class="navbar-brand"> <img src="../img/LOGOS/LOGO-TRANSPARENTE.png" height="50px" width="100" alt="logo"></a>
+          <button type="button" class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#MenuNavegacion">
+              <span class="navbar-toggler-icon"></span>
+          </button>
+          <div id="MenuNavegacion" class="collapse navbar-collapse">
+            <ul class="navbar-nav ms-3">
+              <li class="nav-item"><a class="nav-link" href="Index.html">Inicio</a></li>
+              <li class="nav-item"><a class="nav-link" href="Quiénes Somos.html">¿Qui&eacute;nes Somos?</a></li>
+              <li class="nav-item dropdown">
+                 <a class="nav-link dropdown-toggle" href="#" role="buttom" data-bs-toggle="dropdown">Productos</a>
+                <ul class="dropdown-menu">
+                  <li><a class="dropdown-item" href="../html/tienda.html">Todos</a></li>
+                  <li><a class="dropdown-item" href="#">Gatos</a></li>
+                  <li><a class="dropdown-item" href="../html/tienda.html">Perros</a></li>
+                  <li><a class="dropdown-item" href="#">Farmacia</a></li>
+                </ul>
+              </li>
+              <li class="nav-item"><a class="nav-link" href="Contacto.html">Contacto</a></li>
+            </ul>
           </div>
-        </nav>
-      </div>  
-
-
+          <a href="carrito.php" class="btn"><img src="../img/ICONOS/icon_market_car-1.png" alt="carrito" id="carrito"></a>
+        </div>
+      </nav>
+    </div> 
+    <!-- Acá comienza la tienda -->
     <div class="row">
 
 
