--- a/html/tienda.html
+++ b/html/tienda.html
@@ -33,7 +33,7 @@
               <li class="nav-item"><a class="nav-link" href="Contacto.html">Contacto</a></li>
             </ul>
           </div>
-          <a href="carrito.php" class="btn"><img src="../img/ICONOS/icon_market_car-1.png" alt="carrito" id="carrito"></a>
+          <a href="carrito.html" class="btn"><img src="../img/ICONOS/icon_market_car-1.png" alt="carrito" id="carrito"></a>
         </div>
       </nav>
     </div> 
