--- a/html/carrito.html
+++ b/html/carrito.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.4/font/bootstrap-icons.css">
     <link rel="stylesheet" href="../css/styles_cbs.css">
     <title>MASCOTAS CBS</title>
   </head>
@@ -37,54 +38,65 @@
       </nav>
     </div> 
     <!-- Aquí comienza el carrito -->
-    <div id="Carrito" class="container-fluid col-lg-12">
-        <div class="row">
-            <div id="BarraTienda" class="container-fluid col-lg-2">
-                <div class="dropdown">
-                    <button id="btn_dd" class="btn dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
-                      General
-                    </button>
-                    <ul class="dropdown-menu">
-                      <li><a class="dropdown-item" href="#">Action</a></li>
-                      <li><a class="dropdown-item" href="#">Another action</a></li>
-                      <li><a class="dropdown-item" href="#">Something else here</a></li>
-                    </ul>
-                  </div>
-                  <a id="btn_dd" href="#" class="btn">Farmacia</a>
-                  <div class="dropdown">
-                    <button id="btn_dd" class="btn dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
-                      Gatos
-                    </button>
-                    <ul class="dropdown-menu">
-                      <li><a class="dropdown-item" href="#">Action</a></li>
-                      <li><a class="dropdown-item" href="#">Another action</a></li>
-                      <li><a class="dropdown-item" href="#">Something else here</a></li>
-                    </ul>
-                  </div>
-                  <div class="dropdown">
-                    <button id="btn_dd" class="btn dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
-                      Perros
-                    </button>
-                    <ul class="dropdown-menu">
-                      <li><a class="dropdown-item" href="#">Action</a></li>
-                      <li><a class="dropdown-item" href="#">Another action</a></li>
-                      <li><a class="dropdown-item" href="#">Something else here</a></li>
-                    </ul>
-                  </div>
-            </div>
-            <div id="MiCarrito" class="container-fluid col-lg-10">
-                <h1><strong>Mi Carrito</strong></h1>
-                <div id="ContCarrito" class="container-fluid col-lg-12">
-                    <div class="row">
-                        <div id= "Contenido" class="container-fluid col-lg-8">
-                            <h1>Productos                                    Cantidad</h1>
-                        </div>
-                        <div id="ResumenCompra" class="container-fluid col-lg-4">
-                            <h1>Resumen del Pedido</h1>
-                        </div>
-                    </div>
+    <!-- Esto es una barra lateral-->
+    <nav class="navbar navbar-light">
+        <div class="container-fluid" style="justify-content: end;">
+            <!-- Botón Navbar -->
+            <button class="navbar-toggler" type="button"
+            data-bs-toggle="offcanvas"
+            data-bs-target="#MenuLateral"> <!-- Toggle: hace que el menú se abra de forma lateral. Target: Enlaza el menú con los enlaces que se van a abrir -->
+            <span id="MenuTienda" class="button">MenuTienda</span>
+            </button>
+            <!-- Contenedor del offcanvas-->
+            <section class="offcanvas offcanvas-start" id="MenuLateral">
+                <div id="HeaderMenu" class="offcanvas-header" data-bs-theme="dark">
+                    <h5 class="offcanvas-title">Men&uacute; Tienda</h5>
+                    <button class="btn-close" type="button" aria-label="Close" data-bs-dismiss="offcanvas"></button>
                 </div>
-            </div>
+                <!-- Enlaces del menú lateral-->
+                <div id="linksMenu" class="offcanvas-body d-flex flex-column justify-content-between px-0">
+                    <ul class="navbar-nav ms-3">
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="#" role="buttom" data-bs-toggle="dropdown">Todos</a>
+                           <ul class="dropdown-menu">
+                             <li><a class="dropdown-item" href="#">Alimento Seco</a></li>
+                             <li><a class="dropdown-item" href="#">Alimento H&uacute;medo</a></li>
+                             <li><a class="dropdown-item" href="#">Snacks</a></li>
+                             <li><a class="dropdown-item" href="#">Art&iacute;culos</a></li>
+                             <li><a class="dropdown-item" href="#">Salud y Cuidados</a></li>
+                           </ul>
+                         </li>
+                         <li class="nav-item"><a class="nav-link" href="#">Farmacia</a></li>
+                         <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="#" role="buttom" data-bs-toggle="dropdown">Gatos</a>
+                           <ul class="dropdown-menu">
+                             <li ><a class="dropdown-item" href="#">Alimento Seco</a></li>
+                             <li><a class="dropdown-item" href="#">Alimento H&uacute;medo</a></li>
+                             <li><a class="dropdown-item" href="#">Snacks</a></li>
+                             <li><a class="dropdown-item" href="#">Art&iacute;culos</a></li>
+                           </ul>
+                         </li>
+                         <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="#" role="buttom" data-bs-toggle="dropdown">Perros</a>
+                           <ul class="dropdown-menu">
+                             <li><a class="dropdown-item" href="fit_formula_adulto.html">Alimento Seco</a></li>
+                             <li><a class="dropdown-item" href="#">Alimento H&uacute;medo</a></li>
+                             <li><a class="dropdown-item" href="#">Snacks</a></li>
+                             <li><a class="dropdown-item" href="#">Art&iacute;culos</a></li>
+                           </ul>
+                         </li>
+                    </ul>
+                </div>
+            </section>
+            <!-- Fin del contenedor del offcanvas-->
+        </div>
+    </nav>
+    <!-- Productos del Carrito -->
+    <div id="MiCarrito" class="container-fluid col-lg-11">
+        <h1>Mi Carrito</h1>
+        <div class="row">
+            <div id="Productos" class="container-fluid col-lg-10"></div>
+            <div id="Resumen" class="container-fluid col-lg-2"></div>
         </div>
     </div>
       <!-- Footer -->
@@ -137,8 +149,6 @@
             </div>
         </div>
     </div>
-
-    <script src="https://code.jquery.com/jquery-3.6.4.min.js" integrity="sha256-oP6HI9z1XaZNBrJURtCoUT5SUnxFr8s3BzRl+cbzUq8=" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
     </body> 
 </html>
